messaging_app/messaging_app/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: messaging-app
  labels: { app: messaging-app }
spec:
  replicas: 1
  selector:
    matchLabels: { app: messaging-app }
  template:
    metadata:
      labels: { app: messaging-app }
    spec:
      containers:
        - name: messaging-app
          image: messaging_app:latest
          imagePullPolicy: IfNotPresent
          workingDir: /app
          ports:
            - containerPort: 8000
          command: ["sh","-c"]
          args:
            - |
              python manage.py migrate --noinput || true
              exec python manage.py runserver 0.0.0.0:8000
---
apiVersion: v1
kind: Service
metadata:
  name: messaging-app
  labels: { app: messaging-app }
spec:
  type: ClusterIP
  selector: { app: messaging-app }
  ports:
    - name: http
      port: 8000
      targetPort: 8000
