messaging_app/messaging_app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: messaging-service
  namespace: default
spec:
  selector:
    app: messaging-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
  type: NodePort
